--- a/guia_1/buscador/Cargo.toml
+++ b/guia_1/buscador/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-repositorio_terminos = {path = "./repositorio_terminos"}
+repositorio_documentos = {path = "./repositorio_documentos"}
